# ctf01d-automation-training

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.build-environment  Dockerfile.release-environment  LICENSE  README.md  wsjcpp.yml
data/: config.yml
data/checker/: example_checker.py
example/service/: docker-compose.yml  example_service.py
example_service/: ussr-storage.py
include/: ctf01d_flag.h  iemploy_config.h  iemploy_flags.h  iemploy_runner.h
src/: ctf01d_flag.cpp  gt_errors.h  main.cpp  web_errors.h  web_server.cpp  web_server.h
src.wsjcpp/: CMakeLists.txt
src.wsjcpp/HowardHinnant_date/: wsjcpp.hold.yml
src.wsjcpp/wsjcpp_core/: wsjcpp.hold.yml
src.wsjcpp/wsjcpp_employees/: generate.WsjcppEmploy.wsjcpp-script  wsjcpp.hold.yml  wsjcpp_employees.cpp  wsjcpp_employees.h
src.wsjcpp/wsjcpp_hashes/: wsjcpp.hold.yml
src.wsjcpp/wsjcpp_sql_builder/: wsjcpp.hold.yml
src.wsjcpp/wsjcpp_yaml/: wsjcpp.hold.yml
src/database/: database_file.cpp  database_file.h  db_flags.cpp  db_flags.h  db_rating.cpp  db_rating.h  db_structs.h  db_user_tries.cpp  db_user_tries.h  db_users.cpp  db_users.h  db_uuids.cpp  db_uuids.h
src/employees/: employ_config.cpp  employ_config.h  employ_database.cpp  employ_database.h  employ_flags.cpp  employ_flags.h  employ_runner.cpp  employ_runner.h  employ_users.cpp  employ_users.h  employ_uuids.cpp  employ_uuids.h
src/handlers/: request_handler.cpp  request_handler.h
src/modules/employ-runner/: CMakeLists.txt
src/modules/employ-runner/src/: employ_runner.cpp  employ_runner.h
www/: index.html
www/admin/: index.html
www/css/: index.css
www/js/: fhq.automation-ussr.js  index.js
